fix sonarQube issues